.config/waybar/style.css
@import "./themes/rose-pine.css";

* {
  border: none;
  border-radius: 0;
  min-height: 0;
  font-size: 0.563rem;
}

tooltip {
  background: rgba(38, 35, 58, 0.9);
  border: 1px solid @surface;
}

tooltip label {
  color: @text;
  font-family: Zalando Sans;
  font-size: 0.625rem;
}

#waybar {
  background: rgba(255,0,0,0);
  font-family: CommitMono Nerd Font Propo;
}

/* Left modules */
.modules-left {
  margin-top: 5px;
  margin-left: 7px;
}

#custom-logo {
  font-size: 0.75rem;
  background-color: rgba(250, 244, 237, 0.9); /* rose-pine-dawn @base */
  color: rgba(25, 23, 36, 0.9); /* rose-pine @base */
  padding-left: 8px;
  padding-right: 8px;
}

#workspaces {
  background: rgba(25, 23, 36, 0.9);
}

#workspaces button {
  padding: 2px;
  color: @highlightMed;
  transition: color 0.25s ease-out;
}

#workspaces button:hover {
  color: @text;
  background: @base;
}

#workspaces button:last-child:hover {
  border-bottom-right-radius: 3px;
  border-top-right-radius: 3px;
}

#workspaces button.active {
  color: @gold;
}

#taskbar {
  background: rgba(196, 167, 231, 0.9); /* rose-pine @iris */
  border-radius: 3px;
  margin-left: 7px;
}

#taskbar button {
  padding-left: 7px;
  padding-right: 3px;
  transition: background-color 0.25s ease-out;
}

#taskbar button:first-child {
  padding-left: 7px;
  padding-right: 3px;
}

#taskbar button:hover {
  background: rgb(144, 122, 169); /* rose-pine-dawn @iris */
}

#taskbar button:first-child:hover {
  border-bottom-left-radius: 3px;
  border-top-left-radius: 3px;
}

#taskbar button:last-child:hover {
  border-bottom-right-radius: 3px;
  border-top-right-radius: 3px;
}

/* Center modules */
#privacy {
  background: rgba(250, 244, 237, 0.9); /* rose-pine-dawn @base */
  border-bottom-left-radius: 20%;
  border-bottom-right-radius: 20%;
  padding: 0 10px;
  padding-bottom: 2px;
}

#privacy-item.screenshare {
  color: #40a02b; /* catppuccin @green */
}

#privacy-item.audio-in {
  color: #d7827e; /* rose-pine-dawn @rose */
}

/* Right modules */
.modules-right {
  background: rgba(25, 23, 36, 0.9); /* rose-pine @base */
  border-radius: 3px;
  color: @iris;
  margin-top: 5px;
  margin-right: 7px;
}

#custom-expand-icon {
  font-size: 0.75rem;
  padding-left: 3px;
  padding-right: 3px;
}

#tray {
  font-family: Zalando Sans;
  background: @surface;
  padding: 0 10px;
}

#tray menu {
  background: rgba(38, 35, 58, 0.9);
  color: @text;
  font-family: Zalando Sans;
  font-size: 0.625rem;
}

#bluetooth {
  padding-left: 12px;
  padding-right: 6px;
  font-size: 0.75rem;
}

#bluetooth.off, #bluetooth.disabled {
  color: @muted;
}

#network {
  font-size: 0.75rem;
  padding-left: 15px;
  padding-right: 4px;
}

#network.linked {
  font-size: 0.875rem;
}

#pulseaudio {
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 6px;
}

#pulseaudio.muted {
  color: @muted;
}

#pulseaudio.bluetooth {
  font-size: 0.75rem;
  padding-right: 0;
}

#pulseaudio.bluetooth.muted {
  font-size: 0.875rem;
}

#memory {
  font-size: 0.625rem;
  padding-left: 14px;
  padding-right: 6px;
}

#custom-update {
  padding-left: 14px;
  padding-right: 4px;
}

#custom-screenrecording-indicator {
  padding-left: 12px;
  padding-right: 3px;
}

#custom-screenrecording-indicator.active {
  color: @love;
}

#custom-notification {
  font-size: 0.688rem;
  padding-left: 14px;
  padding-right: 6px;
}

#custom-notification.notification,
#custom-notification.dnd-notification {
  color: @gold;
}

#custom-notification.dnd-notification {
  color: @muted;
  font-size: 0.625rem;
  padding-left: 13px;
  padding-right: 4px;
}

#custom-notification.dnd-none,
#custom-notification.inhibited-none,
#custom-notification.dnd-inhibited-none {
  color: @muted;
}

#custom-weather {
  font-size: 1rem;
  padding-left: 12px;
  padding-right: 6px;
}

#systemd-failed-units {
  font-size: 0.75rem;
  padding-left: 10px;
  padding-right: 11px;
}

#systemd-failed-units.ok {
  color: @pine;
}

#systemd-failed-units.degraded {
  color: #d7827e; /* rose-pine-dawn @rose */
}

#clock {
  color: @text;
  font-family: Zalando Sans;
  padding-left: 7px;
  padding-right: 7px;
}

/* Edges border radius */
#custom-logo,
#custom-expand-icon {
  border-radius: 3px 0px 0px 3px;
}

#workspaces,
#clock {
  border-radius: 0px 3px 3px 0px;
}

